--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node index.ts",
+    "start": "ts-node index.ts",
     "build": "tsc",
     "test": "test"
   },
